Quorum/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectInteger.quorum
class Main
    action Main
        integer v = 5
        Test(v)
    end

    action Test(Object var)
        integer v = cast(integer, var)
        if v = 5
            output "passed"
        end
    end
end
