Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(text var)
    end
end
